example/tests/snapshots/comprehensive_snapshots__arithmetic__chained_sub_long.snap
---
source: tests/comprehensive_snapshots.rs
expression: "safe_parse(\"1 - 2 - 3 - 4 - 5\")"
---
Err(
    "PANIC during parse",
)
