example/tests/snapshots/comprehensive_snapshots__arithmetic__large_number.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar::parse(\"999999\")"
---
Ok(
    Number(
        999999,
    ),
)
