example/tests/snapshots/comprehensive_snapshots__arithmetic__multiplication.snap
---
source: tests/comprehensive_snapshots.rs
expression: "safe_parse(\"3 * 4\")"
---
Err(
    "PANIC during parse",
)
