example/tests/snapshots/comprehensive_snapshots__arithmetic__precedence_sub_mul.snap
---
source: tests/comprehensive_snapshots.rs
expression: "safe_parse(\"1 - 2 * 3\")"
---
Err(
    "PANIC during parse",
)
