example/tests/snapshots/comprehensive_snapshots__arithmetic__single_number.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar::parse(\"1\")"
---
Ok(
    Number(
        1,
    ),
)
