example/tests/snapshots/comprehensive_snapshots__arithmetic__subtraction.snap
---
source: tests/comprehensive_snapshots.rs
expression: "safe_parse(\"1 - 2\")"
---
Err(
    "PANIC during parse",
)
