example/tests/snapshots/comprehensive_snapshots__arithmetic__zero.snap
---
source: tests/comprehensive_snapshots.rs
expression: "grammar::parse(\"0\")"
---
Ok(
    Number(
        0,
    ),
)
